Implemented getting/sending keys, as well as encoding/decoding keys

--- a/CopadsRSA/Properties/launchSettings.json
+++ b/CopadsRSA/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CopadsRSA": {
       "commandName": "Project",
-      "commandLineArgs": "getKey jsb@cs.rit.edu"
+      "commandLineArgs": "sendKey brp8396@rit.edu"
     }
   }
 }
