Implemented sendMsg and getMsg. All code needs to be refactored to match coding standards, as well as updated to include any missing details.

--- a/CopadsRSA/Properties/launchSettings.json
+++ b/CopadsRSA/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CopadsRSA": {
       "commandName": "Project",
-      "commandLineArgs": "sendKey brp8396@rit.edu"
+      "commandLineArgs": "sendMsg jsb@cs.rit.edu \"Test Message From B. Piro\""
     }
   }
 }
