--- a/CopadsRSA/CopadsRSA.csproj
+++ b/CopadsRSA/CopadsRSA.csproj
@@ -11,4 +11,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+
 </Project>
